--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,74 @@ pytest
 flake8
 ipython
 #### Add text to install the python-package here
+anyio==4.9.0
+apsw==3.49.1.0
+apswutils==0.0.2
+asttokens==3.0.0
+beautifulsoup4==4.13.3
+certifi==2025.1.31
+click==8.1.8
+contourpy==1.3.1
+cycler==0.12.1
+decorator==5.2.1
+employee_events @ file:///Users/philipp/Coding/coding_Github/dsnd-dashboard-project/python-package/dist/employee_events-0.0.tar.gz#sha256=bb054ca0400fafec00c805a91a3e4a7a9f7e1ce987f6f5cf6ccf57bb081dfb56
+executing==2.2.0
+fastcore==1.7.29
+fastlite==0.1.2
+flake8==7.1.2
+fonttools==4.56.0
+h11==0.14.0
+httpcore==1.0.7
+httptools==0.6.4
+httpx==0.28.1
+idna==3.10
+iniconfig==2.0.0
+ipython==9.0.2
+ipython_pygments_lexers==1.1.1
+itsdangerous==2.2.0
+jedi==0.19.2
+joblib==1.4.2
+kiwisolver==1.4.8
+matplotlib==3.9.2
+matplotlib-inline==0.1.7
+mccabe==0.7.0
+numpy==2.1.2
+oauthlib==3.2.2
+packaging==24.2
+pandas==2.2.3
+parso==0.8.4
+pexpect==4.9.0
+pillow==11.1.0
+pluggy==1.5.0
+prompt_toolkit==3.0.50
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pycodestyle==2.12.1
+pyflakes==3.2.0
+Pygments==2.19.1
+pyparsing==3.2.1
+pytest==8.3.5
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-fasthtml==0.8.0
+python-multipart==0.0.20
+pytz==2025.1
+PyYAML==6.0.2
+scikit-learn==1.5.2
+scipy==1.14.1
+setuptools==76.0.0
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.6
+sqlite-minutils==4.0.3
+stack-data==0.6.3
+starlette==0.46.1
+threadpoolctl==3.6.0
+traitlets==5.14.3
+typing_extensions==4.12.2
+tzdata==2025.1
+uvicorn==0.34.0
+uvloop==0.21.0
+watchfiles==1.0.4
+wcwidth==0.2.13
+websockets==15.0.1
